--- a/Copia_de_Hunger_games.ipynb
+++ b/Copia_de_Hunger_games.ipynb
@@ -54,7 +54,7 @@
         "dataframe = pd.read_csv(url)\n",
         "dataframe.columns = [\"refractive_index\", \"sodium\", \"magnesium\", \"aluminum\", \"silicon\", \"potassium\", \"calcium\", \"barium\", \"iron\", \"type_of_glass\"]"
       ],
-      "execution_count": 12,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "4Dz5dnmSN7gw",
-        "outputId": "7e89c2d2-e171-4440-8e04-b296fabc01d4",
+        "outputId": "26f26040-1638-445c-937f-46fab0994153",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
@@ -79,7 +79,7 @@
       "source": [
         "dataframe.head(10)"
       ],
-      "execution_count": 13,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,7 +269,35 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KrbgsWlFrV7G",
+        "outputId": "eaf70c53-6ca1-4208-d3b0-a0234dcb152b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dataframe.shape"
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(214, 10)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 86
         }
       ]
     },
@@ -309,8 +337,98 @@
         "from sklearn.metrics import roc_curve, roc_auc_score\n",
         "import plotly.express as px"
       ],
-      "execution_count": null,
+      "execution_count": 81,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iZKE_NDrf2Ix",
+        "outputId": "f971f100-4219-47a5-9495-e2e72b90bf41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dataframe.dtypes"
+      ],
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "refractive_index    float64\n",
+              "sodium              float64\n",
+              "magnesium           float64\n",
+              "aluminum            float64\n",
+              "silicon             float64\n",
+              "potassium           float64\n",
+              "calcium             float64\n",
+              "barium              float64\n",
+              "iron                float64\n",
+              "type_of_glass         int64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UJPEIVa4sGeX"
+      },
+      "source": [
+        "Let´s use Z-score function to detect the outliers and to remove them and get the clean data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fvM0UZNQnYAf",
+        "outputId": "7bd62e8f-f32a-4f79-a932-1159e5f45cdd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from scipy import stats\n",
+        "import numpy as np\n",
+        "\n",
+        "z = np.abs(stats.zscore(dataframe))\n",
+        "threshold = 3\n",
+        "df = dataframe[(z < threshold).all(axis=1)]\n",
+        "df.shape"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(194, 10)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U8D5RAldtO2H"
+      },
+      "source": [
+        "20 outliers were removed from the original dataset."
+      ]
     },
     {
       "cell_type": "code",
@@ -322,14 +440,14 @@
         "Y = dataframe[\"type_of_glass\"]\n",
         "X_train, X_test, Y_train, Y_test = train_test_split(X, Y)"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "wYmzRwDtow1J",
-        "outputId": "9fa650d7-391b-4acc-a8e7-eb8a6628be2c",
+        "outputId": "569b713b-425b-4b6d-dfa4-ce5096504bfe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -338,7 +456,7 @@
         "model = DecisionTreeClassifier(criterion=\"entropy\")\n",
         "model.fit(X_train, Y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -355,103 +473,6 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BrgeELPXpXil",
-        "outputId": "f0be66d2-f0e3-44cc-855d-f11dbf263fa4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "model.score(X_train, Y_train)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1.0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 13
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bvwdvYIKphOY",
-        "outputId": "414243fd-4bcd-4ba4-aa94-ff0fa70794d2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "model.score(X_test, Y_test)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.6666666666666666"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RCSnCrZZplvJ"
-      },
-      "source": [
-        "from sklearn.naive_bayes import GaussianNB\n",
-        "from sklearn.metrics import accuracy_score"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hqYN4Hslp7IY",
-        "outputId": "d404b12c-f4ff-436c-f1d2-42df45c97c53",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "model = GaussianNB()\n",
-        "model.fit(X_train, Y_train)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "GaussianNB(priors=None, var_smoothing=1e-09)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
           "execution_count": 35
         }
       ]
@@ -459,8 +480,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4wejySyGr9tH",
-        "outputId": "a56b324f-6c23-42f4-a9a8-0d6285cd7363",
+        "id": "BrgeELPXpXil",
+        "outputId": "be05c58c-36fa-4313-c47e-3eabb4fd767f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -468,13 +489,13 @@
       "source": [
         "model.score(X_train, Y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7011494252873564"
+              "1.0"
             ]
           },
           "metadata": {
@@ -487,8 +508,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nQdjLvtQr90_",
-        "outputId": "0fcc546c-250d-46d7-a1a4-58bbfe78b336",
+        "id": "bvwdvYIKphOY",
+        "outputId": "bcac037e-1dff-4930-99a1-0eadcf3cbd2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -496,13 +517,13 @@
       "source": [
         "model.score(X_test, Y_test)"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.43333333333333335"
+              "0.6666666666666666"
             ]
           },
           "metadata": {
@@ -515,53 +536,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ce9FdpvAp9KD",
-        "outputId": "7644c880-5e00-4641-e6bf-c9bcb9afce7b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "RCSnCrZZplvJ"
       },
       "source": [
-        "Y_pred = model.predict(X_test)\n",
-        "Y_pred"
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.metrics import accuracy_score"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([1, 1, 1, 1, 2, 1, 1, 1, 6, 1, 1, 1, 7, 1, 5, 1, 1, 1, 7, 1, 1, 1,\n",
-              "       1, 1, 1, 7, 1, 2, 7, 1])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 38
-        }
-      ]
+      "execution_count": 38,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fe9_QCfOqFpQ",
-        "outputId": "4bb5e927-f3e8-453c-cd68-2ccba95b884a",
+        "id": "hqYN4Hslp7IY",
+        "outputId": "3541b3fb-1d63-4940-8aa0-f2aa74c0f923",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "accuracy = accuracy_score(Y_test, Y_pred)\n",
-        "accuracy"
+        "model = GaussianNB()\n",
+        "model.fit(X_train, Y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.43333333333333335"
+              "GaussianNB(priors=None, var_smoothing=1e-09)"
             ]
           },
           "metadata": {
@@ -574,8 +577,124 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "4wejySyGr9tH",
+        "outputId": "1c7a04e8-f3a0-458e-9f66-941e7b574ec9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_train, Y_train)"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.55"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nQdjLvtQr90_",
+        "outputId": "2a7fa0ce-cb52-43c3-d616-108f5f37397a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_test, Y_test)"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ce9FdpvAp9KD",
+        "outputId": "e02ebc49-bf15-4b03-a738-b8589445cb63",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "Y_pred = model.predict(X_test)\n",
+        "Y_pred"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 2, 6, 1, 1, 1, 1, 6, 7, 1, 3, 7, 1, 1, 1, 1, 7, 1, 7, 2,\n",
+              "       1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 3, 7, 1, 1, 7, 1, 1, 2, 1, 1, 7,\n",
+              "       1, 3, 1, 1, 3, 2, 1, 1, 3, 2])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fe9_QCfOqFpQ",
+        "outputId": "0c89eceb-b75c-4eb3-cc51-7b7c05dff16b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "accuracy = accuracy_score(Y_test, Y_pred)\n",
+        "accuracy"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "C5f8H1uiqIXQ",
-        "outputId": "d831e28b-fb03-47c5-e0f0-1ef36bff5780",
+        "outputId": "672db3f9-d0af-4ae1-be39-4ddba3495dc2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -584,7 +703,7 @@
         "model = LogisticRegression()\n",
         "model.fit(X_train, Y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,7 +735,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 44
         }
       ]
     },
@@ -624,7 +743,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "CwsDcJQAq2OI",
-        "outputId": "a5537fef-a8f7-41cb-dd24-a865461c4511",
+        "outputId": "1c07c28c-d2b2-4a74-e8f4-daecd83e5942",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -632,19 +751,19 @@
       "source": [
         "model.score(X_test, Y_test)"
       ],
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.43333333333333335"
+              "0.7407407407407407"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 45
         }
       ]
     },
@@ -652,7 +771,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "swAcQVYXrGCN",
-        "outputId": "e7cd977b-bf32-4d70-88d6-b5c4c812bafa",
+        "outputId": "2c8a9932-d2b4-43de-fd2e-e6dc3132bc05",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -660,19 +779,19 @@
       "source": [
         "model.score(X_train, Y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.632183908045977"
+              "0.6125"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 46
         }
       ]
     },
