--- a/Copia_de_Hunger_games.ipynb
+++ b/Copia_de_Hunger_games.ipynb
@@ -713,9 +713,172 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0daS0Qk5ndJP"
+      },
+      "source": [
+        "Building a bagging estimator."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "sguoAM2vd7ot"
+        "id": "uI-1pPBLmjTF"
+      },
+      "source": [
+        "from sklearn.ensemble import BaggingClassifier\n",
+        "base_estimator = RandomForestClassifier(random_state=seed, n_estimators=500, criterion=\"entropy\")\n",
+        "model = BaggingClassifier(base_estimator, n_estimators=100, max_samples=50, max_features=5)"
+      ],
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AaLq90Xumja4",
+        "outputId": "e3044f2b-aa6f-4f6a-b10a-78692f94d212",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.fit(X_train, y_train)"
+      ],
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "BaggingClassifier(base_estimator=RandomForestClassifier(bootstrap=True,\n",
+              "                                                        ccp_alpha=0.0,\n",
+              "                                                        class_weight=None,\n",
+              "                                                        criterion='entropy',\n",
+              "                                                        max_depth=None,\n",
+              "                                                        max_features='auto',\n",
+              "                                                        max_leaf_nodes=None,\n",
+              "                                                        max_samples=None,\n",
+              "                                                        min_impurity_decrease=0.0,\n",
+              "                                                        min_impurity_split=None,\n",
+              "                                                        min_samples_leaf=1,\n",
+              "                                                        min_samples_split=2,\n",
+              "                                                        min_weight_fraction_leaf=0.0,\n",
+              "                                                        n_estimators=500,\n",
+              "                                                        n_jobs=None,\n",
+              "                                                        oob_score=False,\n",
+              "                                                        random_state=7,\n",
+              "                                                        verbose=0,\n",
+              "                                                        warm_start=False),\n",
+              "                  bootstrap=True, bootstrap_features=False, max_features=5,\n",
+              "                  max_samples=50, n_estimators=100, n_jobs=None,\n",
+              "                  oob_score=False, random_state=None, verbose=0,\n",
+              "                  warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HNQDhw7Smjgi",
+        "outputId": "98db98ef-1398-4c5e-fe7c-046939972276",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_test, y_test)"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6976744186046512"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bn3msq56oIBr",
+        "outputId": "d72e76f0-a030-4ade-be94-cfaaa0e1e90e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "base_estimator.fit(X_train, y_train)"
+      ],
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
+              "                       criterion='entropy', max_depth=None, max_features='auto',\n",
+              "                       max_leaf_nodes=None, max_samples=None,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, n_estimators=500,\n",
+              "                       n_jobs=None, oob_score=False, random_state=7, verbose=0,\n",
+              "                       warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 95
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4tzLpvxnoKtQ",
+        "outputId": "d467ec92-1d7b-4953-e8d5-5e4401fe7cd0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "base_estimator.score(X_test, y_test)"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7209302325581395"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S0n_u_qtoPVc"
       },
       "source": [
         ""
