--- a/Copia_de_Hunger_games.ipynb
+++ b/Copia_de_Hunger_games.ipynb
@@ -728,17 +728,17 @@
       },
       "source": [
         "from sklearn.ensemble import BaggingClassifier\n",
-        "base_estimator = RandomForestClassifier(random_state=seed, n_estimators=500, criterion=\"entropy\")\n",
-        "model = BaggingClassifier(base_estimator, n_estimators=100, max_samples=50, max_features=5)"
+        "base_estimator = RandomForestClassifier(random_state=seed, criterion=\"entropy\")\n",
+        "model = BaggingClassifier(base_estimator, n_estimators=500, max_samples=50, max_features=5)"
       ],
-      "execution_count": 92,
+      "execution_count": 97,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "AaLq90Xumja4",
-        "outputId": "e3044f2b-aa6f-4f6a-b10a-78692f94d212",
+        "outputId": "70b007d4-a974-46c9-ec20-2573540103f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -746,7 +746,7 @@
       "source": [
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 93,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -765,14 +765,14 @@
               "                                                        min_samples_leaf=1,\n",
               "                                                        min_samples_split=2,\n",
               "                                                        min_weight_fraction_leaf=0.0,\n",
-              "                                                        n_estimators=500,\n",
+              "                                                        n_estimators=100,\n",
               "                                                        n_jobs=None,\n",
               "                                                        oob_score=False,\n",
               "                                                        random_state=7,\n",
               "                                                        verbose=0,\n",
               "                                                        warm_start=False),\n",
               "                  bootstrap=True, bootstrap_features=False, max_features=5,\n",
-              "                  max_samples=50, n_estimators=100, n_jobs=None,\n",
+              "                  max_samples=50, n_estimators=500, n_jobs=None,\n",
               "                  oob_score=False, random_state=None, verbose=0,\n",
               "                  warm_start=False)"
             ]
@@ -780,7 +780,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 93
+          "execution_count": 98
         }
       ]
     },
@@ -788,7 +788,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "HNQDhw7Smjgi",
-        "outputId": "98db98ef-1398-4c5e-fe7c-046939972276",
+        "outputId": "24ab6a56-e62a-4187-d649-b912d47c5d08",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -796,7 +796,70 @@
       "source": [
         "model.score(X_test, y_test)"
       ],
-      "execution_count": 94,
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6744186046511628"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bn3msq56oIBr",
+        "outputId": "bc3573a9-42bb-4d5a-efcb-9f5e8150b14d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "base_estimator.fit(X_train, y_train)"
+      ],
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
+              "                       criterion='entropy', max_depth=None, max_features='auto',\n",
+              "                       max_leaf_nodes=None, max_samples=None,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, n_estimators=100,\n",
+              "                       n_jobs=None, oob_score=False, random_state=7, verbose=0,\n",
+              "                       warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4tzLpvxnoKtQ",
+        "outputId": "a5e0cc70-5cd9-485d-e386-d945912126fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "base_estimator.score(X_test, y_test)"
+      ],
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,83 +871,18 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 94
+          "execution_count": 101
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "Bn3msq56oIBr",
-        "outputId": "d72e76f0-a030-4ade-be94-cfaaa0e1e90e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "h3xMi_wx5MIP"
       },
       "source": [
-        "base_estimator.fit(X_train, y_train)"
-      ],
-      "execution_count": 95,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
-              "                       criterion='entropy', max_depth=None, max_features='auto',\n",
-              "                       max_leaf_nodes=None, max_samples=None,\n",
-              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-              "                       min_samples_leaf=1, min_samples_split=2,\n",
-              "                       min_weight_fraction_leaf=0.0, n_estimators=500,\n",
-              "                       n_jobs=None, oob_score=False, random_state=7, verbose=0,\n",
-              "                       warm_start=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 95
-        }
+        "As we can see, Bagging does not improve the Random Forest Classifier as it is already a very powerful classifier and makes a small tweak to Bagging. It would work better on Decision Tree or another less powerful type of classifier. "
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4tzLpvxnoKtQ",
-        "outputId": "d467ec92-1d7b-4953-e8d5-5e4401fe7cd0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "base_estimator.score(X_test, y_test)"
-      ],
-      "execution_count": 96,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.7209302325581395"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 96
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "S0n_u_qtoPVc"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
